# mail_generator

./: .gitignore  README.md  pyproject.toml
mail_generator/: chains.py  cleaned_portfolio.csv  data_loader.py  main.py
