[tool.poetry]
name = "mail-generator"
version = "0.1.0"
description = ""
authors = ["siddhant-mi <siddhant.pandey@mindinventory.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.16"
unstructured = "^0.13.3"
selenium = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
